@@ -1,5 +1,7 @@
 *unreleased*
 
+* Make deploy:upload use the upload() helper for more efficient directory processing [Jamis Buck]
+
 * Make deploy:upload accept globs [Mark Imbriaco]
 
 * Make sure the host is reported with the output from scm_run [Jamis Buck]
